--- a/notes/.htaccess
+++ b/notes/.htaccess
@@ -1,6 +1,7 @@
 RewriteEngine On
 
-# Redirect all requests to index.php for processing
+# Redirect all requests except notes.php to index.php
+RewriteCond %{REQUEST_URI} !^/notes.php$
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.+)$ index.php?short_url=$1 [L,QSA]
